testdata/invalid/missing-type.pakt
# ERROR: assignment without a type annotation
name = 'Alice'
